--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -42,45 +42,27 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
-                android:text="Apakah Planet merupakan Planet Luar?"
+                android:text="Apakah material penyusun berupa gas?"
                 android:layout_margin="10dp"
                 android:textColor="#FFF"/>
            <Button
-               android:id="@+id/btn_1"
+               android:id="@+id/btn_yes"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/pertanyaan"
             android:background="@drawable/bg_answer"
             android:layout_margin="10dp"
-            android:text="Jawaban 1"
+            android:text="Ya"
             />
             <Button
-            android:id="@+id/btn_2"
+            android:id="@+id/btn_no"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/btn_1"
+            android:layout_below="@id/btn_yes"
             android:background="@drawable/bg_answer"
             android:layout_margin="10dp"
-            android:text="Jawaban 2"
+            android:text="Tidak"
             />
-            <Button
-                android:id="@+id/btn_3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/btn_2"
-                android:background="@drawable/bg_answer"
-                android:layout_margin="10dp"
-                android:text="Jawaban 3"
-                />
-            <Button
-                android:id="@+id/btn_4"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/btn_3"
-                android:background="@drawable/bg_answer"
-                android:layout_margin="10dp"
-                android:text="Jawaban 4"
-                />
             
 
 
