--- a/app/src/main/res/layout/activity_main4.xml
+++ b/app/src/main/res/layout/activity_main4.xml
@@ -42,44 +42,28 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
-                android:text="Apakah Planet merupakan Planet Luar?"
+                android:text="Apakah material penyusun berupa batuan?"
                 android:layout_margin="10dp"
                 android:textColor="#FFF"/>
            <Button
-               android:id="@+id/btn_1"
+               android:id="@+id/btn_yes"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/pertanyaan"
             android:background="@drawable/bg_answer"
             android:layout_margin="10dp"
-            android:text="Jawaban 1"
+            android:text="Ya"
             />
             <Button
-            android:id="@+id/btn_2"
+            android:id="@+id/btn_no"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/btn_1"
+            android:layout_below="@id/btn_yes"
             android:background="@drawable/bg_answer"
             android:layout_margin="10dp"
-            android:text="Jawaban 2"
+            android:text="Tidak"
             />
-
-            <Button
-                android:id="@+id/btn_3"
-                android:layout_width="182dp"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/btn_2"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginStart="90dp"
-                android:layout_marginLeft="95dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginEnd="81dp"
-                android:layout_marginRight="5dp"
-                android:layout_marginBottom="5dp"
-                android:background="@drawable/bg_answer"
-                android:text="Submit" />
-
+            
 
 
         </RelativeLayout>
