--- a/app/src/main/res/layout/activity_main15.xml
+++ b/app/src/main/res/layout/activity_main15.xml
@@ -42,7 +42,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
-                android:text="Apakah berada di dalam lintasan orbit asteroid?"
+                android:text="Apakah merupakan planet kerdil?"
                 android:layout_margin="10dp"
                 android:textColor="#FFF"/>
            <Button
