--- a/app/src/main/res/layout/question4.xml
+++ b/app/src/main/res/layout/question4.xml
@@ -4,69 +4,71 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".Question1">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="600dp"
         android:id="@+id/rl_profile"
-               android:orientation="vertical"
+        android:orientation="vertical"
         android:layout_marginVertical="100dp"
         android:layout_marginHorizontal="10dp"/>
-        <RelativeLayout
-            android:id="@+id/bg"
+    <RelativeLayout
+        android:id="@+id/bg"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="20dp"
+        android:layout_marginHorizontal="15dp"
+        android:background="@drawable/bg_question"
+        >
+
+        <TextView
+
+            android:id="@+id/title"
+            android:text="PlanetPedia"
             android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="20dp"
-            android:layout_marginHorizontal="15dp"
-            android:background="@drawable/bg_question"
-            >
+            android:textColor="#FFF"
 
-            <TextView
-
-                android:id="@+id/title"
-                android:text="PlanetPedia"
-                android:layout_centerHorizontal="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#FFF"
-
-                android:textSize="24sp"/>
-            <TextView
-                android:id="@+id/pertanyaan"
-                android:layout_below="@id/title"
-                android:layout_centerHorizontal="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:text="Apakah permukaan berkawah?"
-                android:layout_margin="10dp"
-                android:textColor="#FFF"/>
-           <Button
-               android:id="@+id/btn_yes"
+            android:textSize="24sp"/>
+        <TextView
+            android:id="@+id/pertanyaan"
+            android:layout_below="@id/title"
+            android:layout_centerHorizontal="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:text="Apakah material penyusun berupa es?"
+            android:layout_margin="10dp"
+            android:textColor="#FFF"/>
+        <Button
+            android:id="@+id/btn_yes"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/pertanyaan"
             android:background="@drawable/bg_answer"
             android:layout_margin="10dp"
+            android:onClick="Ya"
             android:text="Ya"
             />
-            <Button
+        <Button
             android:id="@+id/btn_no"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/btn_yes"
             android:background="@drawable/bg_answer"
             android:layout_margin="10dp"
+            android:onClick="Tidak"
             android:text="Tidak"
             />
-            
 
 
-        </RelativeLayout>
+
+    </RelativeLayout>
 
 
 
