--- a/app/src/main/res/layout/result.xml
+++ b/app/src/main/res/layout/result.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".Question1">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -36,7 +36,7 @@
 
                 android:textSize="24sp"/>
             <TextView
-                android:id="@+id/pertanyaan"
+                android:id="@+id/hasil"
                 android:layout_below="@id/title"
                 android:layout_centerHorizontal="true"
                 android:layout_width="wrap_content"
@@ -49,7 +49,7 @@
 
 
             <Button
-                android:id="@+id/btn_3"
+                android:id="@+id/btn_home"
                 android:layout_width="182dp"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/title"
@@ -62,6 +62,7 @@
                 android:layout_marginRight="5dp"
                 android:layout_marginBottom="5dp"
                 android:background="@drawable/bg_answer"
+                android:onClick="back"
                 android:text="Back To Home" />
 
 
