--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -1,88 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/crot">
+    android:background="@drawable/bg"
+    tools:context=".Question1">
 
     <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="600dp"
+        android:id="@+id/rl_profile"
+        android:orientation="vertical"
+        android:layout_marginVertical="100dp"
+        android:layout_marginHorizontal="10dp"/>
+    <RelativeLayout
         android:id="@+id/bg"
-        android:layout_width="250dp"
-        android:layout_height="260dp"
-        android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="20dp"
         android:layout_marginHorizontal="15dp"
         android:background="@drawable/bg_question"
-        android:orientation="vertical"
-        android:padding="25dp">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/namakel"
-            android:layout_margin="15dp"
-            android:text="Nama Kelompok :"
-            android:textColor="#ffff"
-            android:textSize="21dp"
-            android:textStyle="bold"/>
+        >
 
-        <TextView
-            android:id="@+id/mifta"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/namakel"
-            android:text="Miftahul Huda Dewantoro"
-            android:textColor="#ffff"
-            android:textSize="17dp"/>
-        <TextView
-            android:id="@+id/deliar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/mifta"
-            android:text="A. Deliar Nur"
-            android:textColor="#ffff"
-            android:textSize="17dp"/>
-        <TextView
-            android:id="@+id/kholish"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/deliar"
-            android:text="Kholish Fuadi Ahmad"
-            android:textColor="#ffff"
-            android:textSize="17dp"/>
-        <TextView
-            android:id="@+id/chrisna"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/kholish"
-            android:text="Chrisna Haryo Wibisono"
-            android:textColor="#ffff"
-            android:textSize="17dp"/>
-        <TextView
-            android:id="@+id/Ulul"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/chrisna"
-            android:text="Najibullah Ulul Albab"
-            android:textColor="#ffff"
-            android:textSize="17dp"/>
-
-    </RelativeLayout>
-
+        <ImageView
+            android:id="@+id/logo"
+            android:layout_centerHorizontal="true"
+            android:layout_width="wrap_content"
+            android:background="@drawable/bg_answer"
+            android:layout_height="300dp"
+            android:textSize="16sp"
+            android:layout_margin="10dp"
+            android:src="@drawable/logo"
+            android:textColor="#FFF"/>
         <Button
-            android:id="@+id/start"
+            android:id="@+id/btn_yes"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="40dp"
-            android:layout_marginTop="566dp"
-            android:layout_marginEnd="40dp"
-            android:layout_marginBottom="117dp"
-            android:background="@drawable/bg_question"
+            android:layout_below="@id/logo"
+            android:background="@drawable/bg_answer"
+            android:layout_margin="10dp"
+            android:onClick="Start"
             android:text="Mulai"
-            android:textColor="#ffff"
-            android:textSize="15dp"
-            android:textStyle="bold" />
+            />
+
+
 
     </RelativeLayout>
+
+
+
+</RelativeLayout>
+
