--- a/app/src/main/res/layout/result.xml
+++ b/app/src/main/res/layout/result.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg"
     tools:context=".Question1">
 
     <RelativeLayout
@@ -17,7 +18,7 @@
             android:id="@+id/bg"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:layout_width="wrap_content"
+            android:layout_width="345dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="20dp"
@@ -37,7 +38,7 @@
                 android:textSize="24sp"/>
             <TextView
                 android:id="@+id/hasil"
-                android:layout_below="@id/title"
+                android:layout_below="@id/planet"
                 android:layout_centerHorizontal="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -48,22 +49,14 @@
                 android:textColor="#FFF"/>
 
 
-            <Button
-                android:id="@+id/btn_home"
-                android:layout_width="182dp"
-                android:layout_height="wrap_content"
+            <ImageView
+                android:id="@+id/planet"
+                android:layout_marginTop="20dp"
                 android:layout_below="@id/title"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginStart="90dp"
-                android:layout_marginLeft="95dp"
-                android:layout_marginTop="100dp"
-                android:layout_marginEnd="81dp"
-                android:layout_marginRight="5dp"
-                android:layout_marginBottom="5dp"
-                android:background="@drawable/bg_answer"
-                android:onClick="back"
-                android:text="Back To Home" />
+                android:layout_centerHorizontal="true"
+                android:layout_width="65dp"
+                android:layout_height="65dp"
+                android:src="@drawable/not_found" />
 
 
 
